force-app/main/default/objects/NavFlowStatus__c/NavFlowStatus__c.object-meta.xml
<CustomObject>
    <description>Contains navigation flow status for specific contact, account etc., Primarily used for contact.</description>
    <label>Navigation Flow Status</label>
    <nameField>
        
        <displayFormat>NavFlow-{0000000}</displayFormat>
        
        <label>Navigation Flow Status Name</label>
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>Navigation Flow Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>