force-app/main/default/objects/NavFlowStatus__c/fields/Community_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Community_Page_URL__c</fullName>
    <description>Stamp the url from navflowdetail record</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Community_Page_URL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>