force-app/main/default/objects/NavFlowStatus__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Navigation Flow Status</relationshipLabel>
    <relationshipName>Navigation_Flow_Status</relationshipName>
    <type>Lookup</type>
</CustomField>