force-app/main/default/objects/NavFlowStatus__c/fields/EditCalc__c.field-meta.xml
<CustomField>
    <fullName>EditCalc__c</fullName>
    <formula>CONTAINS( FlowDupStatus__c , &quot;C&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EditCalc</label>
    <type>Checkbox</type>
</CustomField>