force-app/main/default/objects/NavFlowStatus__c/fields/FlowCompleteStatus__c.field-meta.xml
<CustomField>
    <fullName>FlowCompleteStatus__c</fullName>
    <formula>IF(CONTAINS( FlowDupStatus__c , &apos;R&apos;),&apos;In Progress&apos;,&apos;Completed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow Complete Status</label>
    <type>Text</type>
</CustomField>