force-app/main/default/objects/NavFlowStatus__c/fields/FlowDupStatus__c.field-meta.xml
<CustomField>
    <fullName>FlowDupStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FlowDupStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>