force-app/main/default/objects/NavFlowStatus__c/fields/FlowDupStatusCopy__c.field-meta.xml
<CustomField>
    <fullName>FlowDupStatusCopy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flow Dup Status Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>