force-app/main/default/objects/NavFlowStatus__c/fields/FlowPageStatus__c.field-meta.xml
<CustomField>
    <fullName>FlowPageStatus__c</fullName>
    <description>A string representing each pages status in the flow. Value is set by navigation flow framework.
Example: CCNRRR

Flow status codes:
R - Required
N - Not Required
C - Completed</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>A string representing each pages status in the flow. Value is set by navigation flow framework.
Example: CCNRRR

Flow status codes:
R - Required
N - Not Required
C - Completed</inlineHelpText>
    <label>Flow Page Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>