force-app/main/default/objects/NavFlowStatus__c/fields/FlowPageStatusCopy__c.field-meta.xml
<CustomField>
    <fullName>FlowPageStatusCopy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flow Page Status Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>