force-app/main/default/objects/NavFlowStatus__c/fields/InitiatedUser__c.field-meta.xml
<CustomField>
    <fullName>InitiatedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiated User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Navigation_Flow_Status</relationshipName>
    <type>Lookup</type>
</CustomField>