force-app/main/default/objects/NavFlowStatus__c/fields/IsContinue__c.field-meta.xml
<CustomField>
    <fullName>IsContinue__c</fullName>
    <formula>AND (
     CONTAINS( FlowDupStatus__c , &apos;C&apos;) ,
     CONTAINS( FlowDupStatus__c , &apos;R&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsContinue</label>
    <type>Checkbox</type>
</CustomField>