force-app/main/default/objects/NavFlowStatus__c/fields/IsEdit__c.field-meta.xml
<CustomField>
    <fullName>IsEdit__c</fullName>
    <formula>NOT( CONTAINS( FlowDupStatus__c , &apos;R&apos;) )
 &amp;&amp; 

CONTAINS( FlowDupStatus__c , &apos;C&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsEdit</label>
    <type>Checkbox</type>
</CustomField>