force-app/main/default/objects/NavFlowStatus__c/fields/IsNotRequired__c.field-meta.xml
<CustomField>
    <fullName>IsNotRequired__c</fullName>
    <formula>NOT(CONTAINS( FlowDupStatus__c , &apos;R&apos;))

&amp;&amp;

NOT(CONTAINS( FlowDupStatus__c , &apos;C&apos;))</formula>
    <label>IsNotRequired</label>
    <type>Checkbox</type>
</CustomField>