force-app/main/default/objects/NavFlowStatus__c/fields/IsStart__c.field-meta.xml
<CustomField>
    <fullName>IsStart__c</fullName>
    <formula>NOT( CONTAINS( FlowDupStatus__c , &apos;C&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsStart</label>
    <type>Checkbox</type>
</CustomField>