force-app/main/default/objects/NavFlowStatus__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To Store Member Id</description>
    <label>Member</label>
    <referenceTo>SSP_Member__c</referenceTo>
    <relationshipLabel>Navigation Flow Status</relationshipLabel>
    <relationshipName>Navigation_Flow_Status</relationshipName>
    <type>Lookup</type>
</CustomField>