force-app/main/default/objects/NavFlowStatus__c/fields/NavFlowName__c.field-meta.xml
<CustomField>
    <fullName>NavFlowName__c</fullName>
    <description>Navigation flow detail (NavFlowDetail__mdt.FlowName__c) custom meta data name. Make sure to exactly match with a custom metadata record.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Navigation flow detail (NavFlowDetail__mdt) custom meta data name. Make sure to exactly match with a custom metadata record.</inlineHelpText>
    <label>Navigation Flow Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>