force-app/main/default/objects/NavFlowStatus__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Salesforce record Id associated with the navigation flow. It could be any object. Navigation flow framework will store/use this value.</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Salesforce record Id associated with the navigation flow. It could be any object. Navigation flow framework will store/use this value.</inlineHelpText>
    <label>Application Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>