force-app/main/default/objects/NavFlowStatus__c/fields/Screen_Status__c.field-meta.xml
<CustomField>
    <fullName>Screen_Status__c</fullName>
    <description>JSON string to store status</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Screen Status</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>