force-app/main/default/objects/NavFlowStatus__c/fields/ScreenStatusCopy__c.field-meta.xml
<CustomField>
    <fullName>ScreenStatusCopy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Screen Status Copy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>