force-app/main/default/objects/NavFlowStatus__c/fields/SSP_Application__c.field-meta.xml
<CustomField>
    <fullName>SSP_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SSP_Application</label>
    <referenceTo>SSP_Application__c</referenceTo>
    <relationshipName>NavFlowStatus</relationshipName>
    <type>Lookup</type>
</CustomField>