force-app/main/default/objects/NavFlowStatus__c/fields/SSP_Member__c.field-meta.xml
<CustomField>
    <fullName>SSP_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SSP_Member</label>
    <referenceTo>SSP_Member__c</referenceTo>
    <relationshipName>NavFlowStatus</relationshipName>
    <type>Lookup</type>
</CustomField>