force-app/main/default/objects/NavFlowStatus__c/fields/SSPApplication__c.field-meta.xml
<CustomField>
    <fullName>SSPApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SSP Application</label>
    <referenceTo>SSP_Application__c</referenceTo>
    <relationshipLabel>Navigation Flow Status</relationshipLabel>
    <relationshipName>Navigation_Flow_Status</relationshipName>
    <type>Lookup</type>
</CustomField>